@@ -69,6 +69,22 @@ function item_proc.build(recipe_book, dictionaries, metadata)
           formatter = "percent",
         }
       end
+      -- Process which crafters this module is compatible with
+      for crafter_name, crafter_data in pairs(recipe_book.crafter) do
+        local allowed_effects = metadata.allowed_effects[crafter_name]
+        local compatible = true
+        if allowed_effects then
+          for effect_name in pairs(prototype.module_effects or {}) do
+            if not allowed_effects[effect_name] then
+              compatible = false
+              break
+            end
+          end
+        end
+        if compatible then
+          crafter_data.compatible_modules[#crafter_data.compatible_modules + 1] = {class = "item", name = name}
+        end
+      end
     end
 
     local fuel_category = util.convert_to_ident("fuel_category", prototype.fuel_category)
